--- a/src/bbtools/gui.form
+++ b/src/bbtools/gui.form
@@ -15,7 +15,7 @@
                               <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
                               <Component id="tfTitulo" alignment="0" max="32767" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jButton4" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btAgregarSeccionesPublicarAnuncios" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="btIniciarPublicarAnuncios" min="-2" pref="118" max="-2" attributes="0"/>
                               </Group>
@@ -85,7 +85,7 @@
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="btAgregarSeccionesPublicarAnuncios" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="btIniciarPublicarAnuncios" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -140,10 +140,13 @@
             <Property name="text" type="java.lang.String" value="Publicar Anuncios"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton4">
+        <Component class="javax.swing.JButton" name="btAgregarSeccionesPublicarAnuncios">
           <Properties>
             <Property name="text" type="java.lang.String" value="Agregar Secciones"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btAgregarSeccionesPublicarAnunciosMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btIniciarPublicarAnuncios">
           <Properties>
@@ -382,7 +385,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable2">
+            <Component class="javax.swing.JTable" name="jtTablaSeccionesPublicarAnuncios">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="1">
